# dify-slack-bot2

./: .gitignore  CLAUDE.md  ChangeLog.md  README.ja.md  README.md  manifest.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  plugin-publish.yml
docs/: dify-extension-plugin-document.md  dify-plugin-document.md  plugin-setup-guide.md  slack-events-api.md
endpoints/: slack-bot2.py  slack-bot2.yaml  slack_bot2.py
group/: slack-bot2.yaml
tests/: test_slack_bot2_endpoint.py
